force-app/main/default/objects/Wellness_Journey__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Set the date when the status is set Complete.</description>
    <inlineHelpText>Set the date when the status is set Complete.</inlineHelpText>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>