force-app/main/default/objects/Wellness_Journey__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Information about of the journey.</description>
    <inlineHelpText>Information about the journey.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>