force-app/main/default/objects/Wellness_Journey__c/fields/Is_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Is_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the journey is accessible.</description>
    <inlineHelpText>True if the journey is accessible.</inlineHelpText>
    <label>Is Accessible</label>
    <type>Checkbox</type>
</CustomField>